spec/fixtures/layout/invalid/child.erb
<%= break_me_in_child %>
